fixed an issue with the big h1 overlapping the navigation

--- a/source/less/theme/header.less
+++ b/source/less/theme/header.less
@@ -46,6 +46,7 @@ header {
     font: 900 9em/0.9 @sans-serif-font;
     letter-spacing: -0.02em;
     position: absolute;
+    z-index:2;
     bottom: 0;
     text-transform: uppercase;
   }
