--- a/source/less/theme/main-nav.less
+++ b/source/less/theme/main-nav.less
@@ -3,6 +3,7 @@
 nav.main-nav {
   text-align:right;
   position: absolute;
+  z-index:3;
   top:1.6em;
   right:1.8em;
   ul {
